# Flask-tinydb

./: .gitignore  LICENSE.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  tests.yaml
docs/: api.rst  conf.py  index.rst  requirements.txt  storage.rst
example/: add_user.py  use_yaml_db.py
examples/: add_user.py  use_yaml_db.py
flask_tinydb/: __init__.py  storage.py  storages.py  tinydb.py
requirements/: dev.in  dev.txt  docs.txt  tests.in  tests.txt  typing.in  typing.txt
src/flask_tinydb/: __init__.py  storages.py  tinydb.py
tests/: test_flask.py  test_storage.py  test_storage.yaml
