[metadata]
name = Flask-tinydb
version = attr: flask_tinydb.__version__
url = https://flask-tinydb.readthedocs.io/
project_urls =
    Documentation =https://flask-tinydb.readthedocs.io/
    Source Code = https://github.com/mmdbalkhi/flask-tinydb
    Issue Tracker = https://github.com/mmdbalkhi/flask-tinydb/issues/
license = BSD-3-Clause
author = Komeil Parseh
author_email = ahmdparsh129@gmail.com
maintainer = Komeil Parseh
maintainer_email = ahmdparsh129@gmail.co
description = flask-tinydb is a Flask extension that provides a TinyDB database.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = flask_tinydb
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = flask_tinydb

[coverage:run]
branch = True
source =
    flask_tinydb
    tests

[coverage:paths]
source =
    flask_tinydb
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ exports names
    src/flask/__init__.py: F401

[mypy]
files = flask_tinydb
python_version = 3.7
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

[mypy-asgiref.*]
ignore_missing_imports = True

[mypy-blinker.*]
ignore_missing_imports = True

[mypy-dotenv.*]
ignore_missing_imports = True

[mypy-cryptography.*]
ignore_missing_imports = True
